Fixed chrome clipping issue #8

--- a/client/styles/notes.less
+++ b/client/styles/notes.less
@@ -2,6 +2,7 @@
 @import 'note.less';
 
 .notes {
+    padding: 8px;
     -moz-column-gap: 12px;
     -moz-column-fill: balance;
     -webkit-column-gap: 12px;
